# mendel

./: .pre-commit-config.yaml  pyproject.toml
mendel/models/: mnist.py
mendel/utils/: data_loaders.py  train.py
tests/: test_mendel.py
