[tool.poetry]
name = "mendel"
version = "0.1.0"
description = "A Biological Perspective on Neural Networks"
authors = ["jlikhuva <jlikhuva@alumni.stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.6.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
pydantic = "^1.10.2"
typer = "^0.6.1"
pandas = "^1.5.0"
torchtext = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
